syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Go-Marketplace/backend/proto/gen/order;order";

package order;

service Order {
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc GetOrder(GetOrderRequest) returns (OrderResponse);
    rpc GetAllUserOrders(GetAllUserOrdersRequest) returns (GetAllUserOrdersResponse);
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);

    rpc UpdateOrderline(UpdateOrderlineRequest) returns (OrderResponse);
}

message CreateOrderRequest {
    string cart_id = 1;
}

message GetOrderRequest {
    string order_id = 1;
}

message DeleteOrderRequest {
    string order_id = 1;
}

message GetAllUserOrdersRequest {
    string user_id = 1;
}

message UpdateOrderlineRequest {
    string order_id = 1;
    string orderline_id = 2;
    OrderlineStatus status = 3;
}

message OrderResponse {
    string order_id = 1;
    string user_id = 2;
    repeated Orderline orderlines = 3;
    int64 total_price = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message Orderline {
    string orderline_id = 1;
    string order_id = 2;
    string product_id = 3;
    string name = 4;
    int64 price = 5;
    int64 quantity = 6;
    OrderlineStatus status = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

enum OrderlineStatus {
    CANCELED = 0;
    PENDING_PAYMENT = 1;
    DELIVERY = 2;
    RECIEVED = 3;
}

message GetAllUserOrdersResponse {
    repeated OrderResponse orders = 1;
}

message DeleteOrderResponse {}
